# vox

./: .actrc  .aiexclude  .aiignore  .coderabbit-semantic-manifest.json  .cursorignore  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .lycheeignore  .markdownlint.jsonc  .tmp_errors.txt  .voxignore  .voxindexingignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci-runner  GEMINI.md  LANGUAGE_DESIGN_PRIORITIES.md  NOTICE  README.md  README_pristine.md  RELEASE_NOTES.md  VOX_GUI_NATIVE_ROADMAP_2026.md  Vox.toml  _check.txt  audit.json  biome.json  build_cli.txt  build_corpus.txt  build_error.txt  build_error_2.txt  build_out.txt  (+83 more)
crates/vox-actor-runtime/: Cargo.toml  README.md
crates/vox-actor-runtime/src/: activity.rs  auth.rs  db.rs  durable_scheduler.rs  feedback.rs  gc.rs  inference_env.rs  lib.rs  llm_result.rs  mailbox.rs  mens.rs  model_resolution.rs  notify.rs  observability.rs  pid.rs  presence.rs  process.rs  rate_limit.rs  registry.rs  resilient_http.rs  retrieval.rs  routing_telemetry.rs  scheduler.rs  state_machine.rs  storage.rs  supervisor.rs
crates/vox-arch-check/: Cargo.toml  build.rs
crates/vox-arch-check/src/: forbidden_patterns.rs  main.rs
crates/vox-arch-check/tests/: integration.rs  rename_consistency_test.rs
crates/vox-ars/: Cargo.toml
crates/vox-ars/src/: context.rs  hooks.rs  lib.rs  openclaw.rs  openclaw_adapter.rs  openclaw_discovery.rs  openclaw_gateway_ws.rs
crates/vox-ars/tests/: domain_test.rs  openclaw_protocol_fixtures.rs
crates/vox-assets/: Cargo.toml
crates/vox-audio-ingress/: Cargo.toml
crates/vox-audio-ingress/src/: main.rs
crates/vox-audit/: Cargo.toml
crates/vox-audit/src/: aggregator.rs  lib.rs  main.rs  recorder.rs  report.rs
crates/vox-audit/tests/: cr_l8_loop_e2e.rs
crates/vox-bootstrap/: Cargo.toml  README.md
crates/vox-bootstrap/src/: engine.rs  lib.rs  main.rs  report.rs
crates/vox-bootstrap/tests/: engine_test.rs
crates/vox-bounded-fs/: Cargo.toml
crates/vox-bounded-fs/src/: lib.rs
crates/vox-bounded-fs/tests/: workspace_guardrails.rs
crates/vox-browser/: Cargo.toml
crates/vox-browser/src/: engine.rs  lib.rs
crates/vox-browser/tests/: smoke.rs
crates/vox-build-meta/: Cargo.toml  build.rs
crates/vox-build-meta/src/: lib.rs
crates/vox-build-meta/tests/: deprecation.rs
crates/vox-capability-registry/: Cargo.toml
crates/vox-capability-registry/src/: command_registry.rs  document.rs  ids.rs  lib.rs  loader.rs  manifest.rs  openai.rs  registry.rs  types.rs  validate.rs
crates/vox-capability-registry/tests/: registry_test.rs
crates/vox-checksum-manifest/: Cargo.toml
crates/vox-checksum-manifest/src/: lib.rs
crates/vox-claim-extractor/: Cargo.toml
crates/vox-claim-extractor/src/: atomic.rs  constrained.rs  lib.rs  minicheck.rs  pipeline.rs  span.rs  types.rs  veriscore.rs
crates/vox-claim-extractor/tests/: scifact_eval.rs
crates/vox-class-routing/: Cargo.toml
crates/vox-class-routing/src/: routing.rs
crates/vox-clavis/: Cargo.toml  test.rs
crates/vox-clavis/src/: bounded_fs.rs  lib.rs  modify_specs.py  policy.rs  redact.rs  resolver.rs  spec.rs  tests.rs  types.rs
crates/vox-clavis/tests/: vox_vault_tests.rs
crates/vox-cli/: Cargo.toml  README.md  build.rs
crates/vox-cli-ci/: Cargo.toml
crates/vox-cli-ci/src/: lib.rs
crates/vox-cli-core/: Cargo.toml
crates/vox-cli-core/src/: benchmark_telemetry.rs  cli_actions.rs  cli_args.rs  constants.rs  db_types.rs  diagnostics.rs  fs_utils.rs  lib.rs  ludus_shim.rs  scientia.rs  workflow_journal_codex.rs
crates/vox-cli/src/: artifact_policy.rs  autofix.rs  benchmark_telemetry.rs  build_lock.rs  build_service.rs  cli_actions.rs  cli_args.rs  cli_dispatch.rs  codex_cmd.rs  command_catalog.rs  command_contract.rs  command_registry_model.rs  compilerd.rs  config.rs  dei_daemon.rs  deprecation.rs  diagnostics.rs  dispatch.rs  dispatch_protocol.rs  frontend.rs  fs_utils.rs  fuzzy.rs  island_paths.rs  isolation.rs  latin_cmd.rs  lib.rs  lock_telemetry.rs  main.rs  mesh_codex_telemetry.rs  pipeline.rs  populi_codex_telemetry.rs  process_supervision.rs  progress.rs  render.rs  slo_gates.rs  table.rs  telemetry_corpus_feedback_sink.rs  telemetry_sink.rs  telemetry_spool.rs  templates.rs  (+8 more)
crates/vox-cli/tests/: check_diagnostics_json_golden.rs  check_for_llm_envelope.rs  ci_dev_loop_audit.rs  ci_pre_push.rs  ci_workflow_contract.rs  clavis_doctor_rollout_integration.rs  coderabbit_e2e.rs  command_catalog_paths_baseline.rs  cr_l8_flywheel_e2e.rs  db_schema_coverage_integration.rs  dei_daemon_contract.rs  dispatch_preview.rs  frontend_dependency_policy_test.rs  full_stack_minimal_build.rs  generate_plugin_catalog_docs_smoke.rs  live_feature_wiring.rs  login_alias_tests.rs  mens_scorecard_schema_contract.rs  mens_training_ssot_arch_page.rs  migrate_codemod_test.rs  migrate_web_smoke.rs  migration_evidence_contract.rs  plugin_abi_parity_smoke.rs  plugin_catalog_parity_smoke.rs  plugin_commands_smoke.rs  plugin_skill_parity_smoke.rs  pm_lifecycle_integration.rs  policy_allowlist_parity_integration.rs  publication_route_golden.rs  query_all_guard_integration.rs  row_serde_lint_integration.rs  run_benchmark.rs  run_mode_dispatch.rs  rust_import_pipeline_integration.rs  scaffold_spa_manifest_idempotent.rs  scaffold_tanstack_start_layout.rs  script_std_builtin_surface.rs  secrets_doctor_rollout_integration.rs  share_bundle_cache_test.rs  share_cli_test.rs  (+13 more)
crates/vox-cli/wix/: main.wxs
crates/vox-code-audit/: Cargo.toml
crates/vox-code-audit/src/: ai_analyze.rs  embedded_rules.rs  engine.rs  lib.rs  report.rs  retirement_parity.rs  rules.rs  (+6 more)
crates/vox-codegen/: Cargo.toml
crates/vox-codegen-rust/: Cargo.toml  README.md
crates/vox-codex-api/: Cargo.toml
crates/vox-compiler/: Cargo.toml  build.rs
crates/vox-compiler-emit/: Cargo.toml
crates/vox-config/: Cargo.toml
crates/vox-constrained-gen/: Cargo.toml
crates/vox-container/: Cargo.toml
crates/vox-corpus/: Cargo.toml  build.rs
crates/vox-critic-gate/: Cargo.toml
(+7443 files in other folders)
