[workspace]
resolver = "2"
members = ["crates/*"]
exclude = [
    "crates/vox-dei",
    "crates/vox-py",
]
default-members = ["crates/vox-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Vox Contributors"]
repository = "https://github.com/vox-foundation/vox.git"
rust-version = "1.92"
keywords = ["vox", "language", "compilers"]
categories = ["development-tools", "compilers"]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
# Internal crates
vox-ars                   = { path = "crates/vox-ars" }
vox-capability-registry   = { path = "crates/vox-capability-registry" }
vox-clavis                = { path = "crates/vox-clavis" }
vox-cli                   = { path = "crates/vox-cli" }
vox-bounded-fs            = { path = "crates/vox-bounded-fs" }
vox-compiler              = { path = "crates/vox-compiler" }
vox-config                = { path = "crates/vox-config" }
vox-container             = { path = "crates/vox-container" }
vox-checksum-manifest     = { path = "crates/vox-checksum-manifest" }
vox-install-policy        = { path = "crates/vox-install-policy" }
vox-jsonschema-util       = { path = "crates/vox-jsonschema-util" }
vox-corpus                = { path = "crates/vox-corpus" }
vox-db                    = { path = "crates/vox-db" }
vox-eval                  = { path = "crates/vox-eval" }
vox-forge                 = { path = "crates/vox-forge" }

vox-git                   = { path = "crates/vox-git" }
vox-lsp                   = { path = "crates/vox-lsp" }
vox-ludus                 = { path = "crates/vox-ludus" }
vox-populi                  = { path = "crates/vox-populi" }
vox-mcp                   = { path = "crates/vox-mcp" }
vox-oratio                = { path = "crates/vox-oratio" }
vox-orchestrator          = { path = "crates/vox-orchestrator" }
vox-openai-sse            = { path = "crates/vox-openai-sse" }
vox-openai-wire           = { path = "crates/vox-openai-wire" }
vox-pm                    = { path = "crates/vox-pm" }
vox-primitives            = { path = "crates/vox-primitives" }
vox-protocol              = { path = "crates/vox-protocol" }
vox-reqwest-defaults      = { path = "crates/vox-reqwest-defaults" }
vox-repository            = { path = "crates/vox-repository" }
vox-runtime               = { path = "crates/vox-runtime" }
vox-scaling-policy        = { path = "crates/vox-scaling-policy" }
vox-skills                = { path = "crates/vox-skills" }
vox-socrates-policy       = { path = "crates/vox-socrates-policy" }
vox-ssg                   = { path = "crates/vox-ssg" }
vox-tensor                = { path = "crates/vox-tensor" }
vox-toestub               = { path = "crates/vox-toestub" }
vox-workflow-runtime      = { path = "crates/vox-workflow-runtime" }
vox-publisher             = { path = "crates/vox-publisher" }

# External dependencies (centralized versions)
logos              = "0.16"
clap               = { version = "4.5", features = ["derive"] }
clap_complete      = { version = "4.5" }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_yaml         = "0.9"
toml               = "0.8"
miette             = { version = "7.6", features = ["fancy"] }
tokio              = { version = "1", features = ["rt", "macros", "sync", "time", "net", "process", "io-util", "fs", "rt-multi-thread"] }
tokio-stream       = { version = "0.1", default-features = false }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
reqwest            = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
sha2               = "0.10"
sha3               = "0.10"
bincode            = "2"
data-encoding      = "2"
thiserror          = "1"
base64             = "0.22"
owo-colors         = "4"
chrono             = { version = "0.4", default-features = false, features = ["clock", "std"] }
regex              = "1"
comfy-table        = "7"
tempfile           = "3"
turso              = { version = "0.4", default-features = false, features = ["sync"] }
blake3             = "1"
jsonwebtoken       = "9"
ed25519-dalek      = "2"
insta              = { version = "1", features = ["json"] }
async-trait        = "0.1"
futures-util       = "0.3"
glob               = "0.3"
dirs               = "6"
uuid               = { version = "1", features = ["v4", "serde"] }
async-stream       = "0.3"
tower-lsp-server   = "0.23"
xxhash-rust        = { version = "0.8", features = ["xxh3"] }
sysinfo            = "0.38"
walkdir            = "2"
rand               = { version = "0.8", features = ["small_rng", "std_rng"] }
burn               = { version = "0.19", default-features = false, features = ["std", "ndarray"] }
candle-core        = { version = "0.9", default-features = false }
candle-nn          = { version = "0.9", default-features = false }
safetensors        = "0.4"
tokenizers         = "0.21"
# 0.4+ resolves Hugging Face relative `Location` redirects in tokio metadata (0.3 breaks with `relative URL without a base`).
hf-hub             = { version = "0.4" }
keyring            = "3"
qlora-rs           = "1.0.5"
peft-rs            = "1.0"
bytes              = "1"
schemars           = { version = "1", features = ["derive"] }
jsonschema         = { version = "0.26", default-features = false }
strum              = { version = "0.26", features = ["derive"] }
serial_test        = "3"

# Turso / libsql pulls `aegis`; patch uses **pure-rust** defaults so MSVC builds skip the C backend (no clang-cl).
[patch.crates-io]
aegis = { path = "patches/aegis-0.9.8" }
# Vox: stabilize deep o_proj proxy stacks + correct grad-accum scaling in `training_step_lm`.
qlora-rs = { path = "patches/qlora-rs-1.0.5" }
# Vox: pass -ccbin MSVC cl path via cc::Build to avoid missing cl.exe when running cargo build without developer prompt.
candle-kernels = { path = "patches/candle-kernels-0.9.2" }

[profile.release]
lto = "thin"
strip = "debuginfo"


