[workspace]
resolver = "2"
members = ["crates/*","crates/workspace-hack"]
exclude = [
    "crates/vox-arch-check/tests/fixtures/missing-desc",
    "crates/vox-plugin-host/tests/fixtures/noop-code",
    "crates/vox-plugin-host/tests/fixtures/noop-code-bad-abi",
    "crates/vox-plugin-noop-skill",
    "crates/vox-plugin-skill-compiler",
    "crates/vox-plugin-skill-git",
    "crates/vox-plugin-skill-memory",
    "crates/vox-plugin-skill-orchestrator",
    "crates/vox-plugin-skill-rag",
    "crates/vox-plugin-skill-testing",
    "crates/vox-plugin-skill-testing-validate",
    "crates/vox-plugin-skill-v0",
]
default-members = ["crates/vox-cli"]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Bert Brainerd"]
repository = "https://github.com/vox-foundation/vox.git"
rust-version = "1.92"
keywords = ["vox", "language", "compilers"]
categories = ["development-tools", "compilers"]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.dev]
incremental = true
split-debuginfo = "unpacked"
# Line tables only (vs full DWARF at debug=2). Backtraces and breakpoints still
# work. Cuts rlib size for first-party crates by ~70-80%; the 1.7 GB
# libvox_orchestrator rlib was the largest single contributor to the 86 GB
# target/ before this change.
debug = 1

[profile.dev.package."*"]
# Keep opt-level=1 for deps: parsing and serde noticeably faster at dev time.
# But strip their debug info — you almost never step into dep source in a
# debugger, and the savings compound across 40+ stale rlib copies in deps/.
opt-level = 1
debug = 0

[workspace.dependencies]
workspace-hack            = { path = "crates/workspace-hack" }
# Internal crates
vox-build-meta            = { path = "crates/vox-build-meta" }
vox-telemetry             = { path = "crates/vox-telemetry" }

vox-agentos-mutation      = { path = "crates/vox-agentos-mutation" }
vox-capability-registry   = { path = "crates/vox-capability-registry" }
vox-secrets                = { path = "crates/vox-secrets" }
vox-cli                   = { path = "crates/vox-cli" }
vox-bounded-fs            = { path = "crates/vox-bounded-fs" }
vox-compiler              = { path = "crates/vox-compiler" }
vox-codegen         = { path = "crates/vox-codegen" }
vox-config                = { path = "crates/vox-config" }
vox-container             = { path = "crates/vox-container" }
vox-deploy-codegen        = { path = "crates/vox-deploy-codegen" }
vox-skill-runtime         = { path = "crates/vox-skill-runtime" }
vox-checksum-manifest     = { path = "crates/vox-checksum-manifest" }
vox-install-policy        = { path = "crates/vox-install-policy" }
vox-jsonschema-util       = { path = "crates/vox-jsonschema-util" }
vox-corpus                = { path = "crates/vox-corpus" }
vox-db                    = { path = "crates/vox-db" }
vox-db-types              = { path = "crates/vox-db-types" }
vox-eval                  = { path = "crates/vox-eval" }
vox-exec-grammar          = { path = "crates/vox-exec-grammar" }
vox-forge                 = { path = "crates/vox-forge" }
vox-crypto                = { path = "crates/vox-crypto" }
vox-identity              = { path = "crates/vox-identity" }

vox-openclaw-runtime           = { path = "crates/vox-openclaw-runtime" }
vox-doc-inventory         = { path = "crates/vox-doc-inventory" }
vox-doc-pipeline          = { path = "crates/vox-doc-pipeline" }
vox-integration-tests     = { path = "crates/vox-integration-tests" }
vox-mcp-registry          = { path = "crates/vox-mcp-registry" }
vox-scientia-ingest       = { path = "crates/vox-scientia-ingest" }
vox-test-harness          = { path = "crates/vox-test-harness" }
vox-webhook               = { path = "crates/vox-webhook" }
vox-git                   = { path = "crates/vox-git" }
vox-constrained-gen       = { path = "crates/vox-constrained-gen" }
vox-grammar-export        = { path = "crates/vox-grammar-export" }
vox-http-envelope         = { path = "crates/vox-http-envelope" }
vox-lsp                   = { path = "crates/vox-lsp" }
vox-gamify                 = { path = "crates/vox-gamify" }
vox-hf-layout              = { path = "crates/vox-hf-layout" }
vox-populi                = { path = "crates/vox-populi" }
vox-ml-cli                  = { path = "crates/vox-ml-cli" }
vox-mesh-types            = { path = "crates/vox-mesh-types" }
vox-mesh-models           = { path = "crates/vox-mesh-models" }
vox-mesh-policy           = { path = "crates/vox-mesh-policy" }

vox-oratio                = { path = "crates/vox-oratio" }
vox-orchestrator          = { path = "crates/vox-orchestrator" }
vox-orchestrator-core     = { path = "crates/vox-orchestrator-core" }
vox-orchestrator-test-helpers = { path = "crates/vox-orchestrator-test-helpers" }
vox-orchestrator-mcp      = { path = "crates/vox-orchestrator-mcp" }
vox-orchestrator-queue    = { path = "crates/vox-orchestrator-queue" }
vox-orchestrator-d        = { path = "crates/vox-orchestrator-d" }
vox-orchestrator-types    = { path = "crates/vox-orchestrator-types" }
vox-orchestrator-cap-mint = { path = "crates/vox-orchestrator-cap-mint" }
vox-openai-sse            = { path = "crates/vox-openai-sse" }
vox-openai-wire           = { path = "crates/vox-openai-wire" }
vox-plugin-api            = { path = "crates/vox-plugin-api" }
vox-plugin-types          = { path = "crates/vox-plugin-types" }
vox-plugin-catalog        = { path = "crates/vox-plugin-catalog" }
vox-plugin-host           = { path = "crates/vox-plugin-host" }
vox-plugin-nvml-probe     = { path = "crates/vox-plugin-nvml-probe" }
vox-plugin-runtime-container = { path = "crates/vox-plugin-runtime-container" }
vox-plugin-runtime-wasm   = { path = "crates/vox-plugin-runtime-wasm" }
vox-plugin-publication    = { path = "crates/vox-plugin-publication" }
vox-wasm-engine           = { path = "crates/vox-wasm-engine" }
vox-package                    = { path = "crates/vox-package" }
vox-package-types              = { path = "crates/vox-package-types" }
vox-inference                  = { path = "crates/vox-inference" }
vox-distributed-training       = { path = "crates/vox-distributed-training" }
vox-mens-eval                  = { path = "crates/vox-mens-eval" }
vox-publisher             = { path = "crates/vox-publisher", default-features = false }
vox-cli-core              = { path = "crates/vox-cli-core" }
vox-cli-ci                = { path = "crates/vox-cli-ci" }

vox-project-scaffold      = { path = "crates/vox-project-scaffold" }
vox-primitives            = { path = "crates/vox-primitives" }
vox-protocol              = { path = "crates/vox-protocol" }
vox-reqwest-defaults      = { path = "crates/vox-reqwest-defaults" }
vox-prereg                = { path = "crates/vox-prereg" }
vox-research-events       = { path = "crates/vox-research-events" }
vox-nanopub               = { path = "crates/vox-nanopub" }
vox-ro-crate              = { path = "crates/vox-ro-crate" }
vox-claim-extractor       = { path = "crates/vox-claim-extractor" }
vox-repository            = { path = "crates/vox-repository" }
vox-rule-pack             = { path = "crates/vox-rule-pack" }
vox-actor-runtime               = { path = "crates/vox-actor-runtime" }
vox-scaling-policy        = { path = "crates/vox-scaling-policy" }
vox-share                 = { path = "crates/vox-share" }
vox-skills                = { path = "crates/vox-skills" }
vox-ssg                   = { path = "crates/vox-ssg" }
vox-tensor                = { path = "crates/vox-tensor" }
vox-code-audit               = { path = "crates/vox-code-audit" }
vox-drift-check              = { path = "crates/vox-drift-check" }
vox-workflow-runtime      = { path = "crates/vox-workflow-runtime" }
vox-search                = { path = "crates/vox-search" }
vox-dashboard             = { path = "crates/vox-dashboard" }
vox-inspect-bridge        = { path = "crates/vox-inspect-bridge" }

# External dependencies (centralized versions)
abi_stable         = "0.11"
logos              = "0.16"
clap               = { version = "4.5", features = ["derive"] }
clap_complete      = { version = "4.5" }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_yaml         = "0.9"
toml               = "0.8"
miette             = { version = "7.6", features = ["fancy"] }
aho-corasick       = "1"
nucleo             = { version = "0.5" }
tokio              = { version = "1", features = ["rt", "macros", "sync", "time", "net", "process", "io-util", "fs", "rt-multi-thread", "signal"] }
tokio-stream       = { version = "0.1", default-features = false }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-test       = { version = "0.2", features = ["no-env-filter"] }
anyhow             = "1"
reqwest            = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
bsky-sdk = { version = "0.1", default-features = false, features = ["atrium-xrpc-client", "rich-text", "default-client"] }
atrium-api = { version = "0.25", default-features = false, features = ["bluesky"] }
sha2               = "0.10"
sha3               = "0.10"
bincode            = "2"
data-encoding      = "2"
thiserror          = "1"
base64             = "0.22"
owo-colors         = "4"
chrono             = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
regex              = "1"
comfy-table        = "7"
csv                = "1.3"
tempfile           = "3"
turso              = { version = "0.4", default-features = false, features = ["sync"] }
blake3             = { version = "1", features = ["pure"] }
jsonwebtoken       = { version = "9", default-features = false }
ed25519-dalek      = { version = "2", default-features = false }
x25519-dalek       = { version = "2", default-features = false, features = ["static_secrets"] }
rustls             = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile     = "2"
tokio-rustls       = { version = "0.26", default-features = false, features = ["ring"] }
insta              = { version = "1", features = ["json"] }
criterion          = { version = "0.5", features = ["html_reports"] }
async-trait        = "0.1"
futures-util       = "0.3"
glob               = "0.3"
hound              = "3.5.1"
hex                = "0.4.3"
dirs               = "6"
mime_guess         = "2.0"
uuid               = { version = "1", features = ["v4", "serde"] }
async-stream       = "0.3"
xxhash-rust        = { version = "0.8", features = ["xxh3"] }
sysinfo            = "0.38"
walkdir            = "2"
rayon              = "1.10"
rand               = { version = "0.8", features = ["small_rng", "std_rng"] }
candle-core         = { version = "0.9", default-features = false }
candle-nn           = { version = "0.9", default-features = false }
candle-transformers = { version = "0.9", default-features = false }
safetensors        = "0.7"
tokenizers         = { version = "0.21", default-features = false, features = ["fancy-regex"] }
memmap2            = "0.9"
# 0.4+ resolves Hugging Face relative `Location` redirects in tokio metadata (0.3 breaks with `relative URL without a base`).
hf-hub             = { version = "0.4" }
keyring            = "3"
qlora-rs           = "1.0.5"
peft-rs            = "1.0"
bytes              = "1"
schemars           = { version = "1", features = ["derive"] }
jsonschema         = { version = "0.26", default-features = false }
openapiv3          = "2"
governor           = "0.10"
strum              = { version = "0.26", features = ["derive"] }
serial_test        = "3"
wiremock           = "0.6"
tantivy            = "0.22"
scraper            = "0.20"
html2text          = "0.12"
# Optional NVIDIA management library bindings (runtime `nvml.dll` / `libnvidia-ml.so`).
nvml-wrapper       = { version = "0.11", default-features = false }
# Wave 5: Async mesh results
dashmap            = { version = "6", default-features = false }
rust_decimal       = { version = "1.36", features = ["serde", "db-diesel-postgres"], default-features = false }
aes-gcm            = "0.10"
unicode-segmentation = "1.12"
argon2             = "0.5"

# [VOX AUDIT 2026-04-13] Centralized sprawling versions found in sub-crates
axum               = { version = "0.8", default-features = false }
axum-extra         = "0.12.5"
hyper              = { version = "1", features = ["full"] }
hyper-util         = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
tower-http         = "0.6.2"
subtle             = "2.6"
futures            = "0.3"
chacha20poly1305   = "0.10"
aead               = { version = "0.5", features = ["std"] }
gix                = { version = "0.70", default-features = false }
jj-lib             = { version = "=0.27.0", default-features = false }
wasmtime           = "42.0.1"
wasmtime-wasi      = "42.0.1"
zip                = "8.4.0"
self_update        = "0.43.1"
landlock           = "0.4.4"
win32job           = "2"
windows-sys        = "0.59"
tavily             = "2.1.0"
quick-xml          = "0.31"
flate2             = { version = "1", default-features = false, features = ["rust_backend"] }
tokio-tungstenite  = { version = "0.24", default-features = false }
rubato             = "0.15.0"
symphonia          = "0.5.4"
sherpa-onnx        = "1.12"
syn                = "2"
prettyplease       = "0.2"
proc-macro2        = "1"
semver             = "1"
parking_lot        = "0.12"
secrecy            = "0.10"
rmcp               = "0.16"
rmp-serde          = "1"
libloading         = "0.8"
lru                = "0.13"
futures-core       = "0.3"
quote              = "1"
similar            = "2"
globset            = "0.4"
swc_ecma_parser    = "39"
swc_ecma_ast       = "23"
swc_ecma_visit     = "23"
swc_common         = "21"
which              = "7"
ctrlc              = "3.4"
proptest           = { version = "1", default-features = false, features = ["std"] }


[patch.crates-io]
# Vox: stabilize deep o_proj proxy stacks + correct grad-accum scaling in `training_step_lm`.
qlora-rs = { path = "patches/qlora-rs-1.0.5" }
# Vox: pass -ccbin MSVC cl path via cc::Build to avoid missing cl.exe when running cargo build without developer prompt.
candle-kernels = { path = "patches/candle-kernels-0.9.2" }
# Vox: enable pure-rust crypto on all targets so MSVC builds do not require clang-cl (aegis C backend).
aegis = { path = "patches/aegis-0.9.8" }

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.ci]
inherits = "release"
lto = "thin"
strip = "debuginfo"

# Distribution profile: fat LTO + single codegen unit + symbol stripping.
# Produces the smallest, fastest binaries for shipping.
# Use: cargo build --profile dist -p vox-cli
# (Keep --release for fast local builds; --profile dist is for CI ship artifacts.)
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"


