[package]
name = "vox-arch-check"
version.workspace = true
edition.workspace = true
description = "CI guard: enforces the workspace layered-architecture model. See docs/src/architecture/2026-05-08-workspace-reorg-design.md."

[dependencies]
cargo_metadata = "0.20"
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
regex = { workspace = true }
globset = { workspace = true }

[[bin]]
name = "vox-arch-check"
path = "src/main.rs"

[dev-dependencies]
vox-compiler = { path = "../vox-compiler" }
tempfile = { workspace = true }

[build-dependencies]
vox-build-meta = { workspace = true }

[lints]
workspace = true
