[package]
name = "vox-ars"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent Runtime System (ARS) — sandbox isolation, trust classification, and OpenClaw skill marketplace integration. Re-exported from vox-skills::ars_shim; physical move deferred (CC-1 follow-up)."

[dependencies]
vox-skills = { workspace = true }
workspace-hack = { workspace = true }

[lints]
workspace = true
