[package]
name = "vox-bootstrap"
version.workspace = true
edition.workspace = true
description = "Host toolchain bootstrap and install plan (rustup, clang for Turso) — no Turso/vox-pm dependency"
readme = "README.md"

[[bin]]
name = "vox-bootstrap"
path = "src/main.rs"

[dependencies]
vox-checksum-manifest = { workspace = true }
vox-build-meta = { workspace = true }
vox-install-policy = { workspace = true }
clap = { workspace = true }
flate2 = "1.1.9"
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = "0.4.45"
zip = "8.4.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
